--- a/main.html
+++ b/main.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Your Portfolio</title>
+    <!-- Optional: Link to your CSS file for styling -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <!-- Image -->
+    <img src="your-image.jpg" alt="Your Name's Image">
+
+    <!-- Name -->
+    <h1>Your Name</h1>
+
+    <!-- LinkedIn Profile -->
+    <p>Connect with me on <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a>.</p>
+
+    <!-- Skills Section -->
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>I have expertise in the following areas:</p>
+        <ul>
+            <li>Web Development</li>
+            <li>JavaScript</li>
+            <li>HTML/CSS</li>
+            <li>Responsive Design</li>
+            <!-- Add more skills as needed -->
+        </ul>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>Project 1: Responsive Portfolio Website</li>
+            <li>Project 2: JavaScript ToDo App</li>
+            <li>Project 3: Personal Blog</li>
+            <!-- Add more projects as needed -->
+        </ul>
+    </section>
 
 </body>
 
